hydroflow/tests/snapshots/surface_scheduling__nospin_issue_961_complicated@graphvis_dot.snap
---
source: hydroflow/tests/surface_scheduling.rs
expression: "df.meta_graph().unwrap().to_dot(&Default::default())"
---
digraph {
    node [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace", style=filled];
    edge [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace"];
    n1v1 [label="(n1v1) source_iter([1])", shape=invhouse, fillcolor="#88aaff"]
    n2v1 [label="(n2v1) union()", shape=invhouse, fillcolor="#88aaff"]
    n3v1 [label="(n3v1) persist()", shape=invhouse, fillcolor="#88aaff"]
    n4v1 [label="(n4v1) fold(|| 0, |accum, x| *accum += x)", shape=invhouse, fillcolor="#88aaff"]
    n5v1 [label="(n5v1) defer_tick_lazy()", shape=invhouse, fillcolor="#88aaff"]
    n6v1 [label="(n6v1) filter(|_| false)", shape=invhouse, fillcolor="#88aaff"]
    n7v1 [label="(n7v1) tee()", shape=house, fillcolor="#ffff88"]
    n8v1 [label="(n8v1) null()", shape=house, fillcolor="#ffff88"]
    n9v1 [label="(n9v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n10v1 [label="(n10v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n11v1 [label="(n11v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n1v1 -> n2v1
    n6v1 -> n7v1
    n5v1 -> n6v1
    n4v1 -> n9v1
    n3v1 -> n10v1
    n2v1 -> n3v1
    n7v1 -> n8v1
    n7v1 -> n11v1
    n9v1 -> n5v1 [color=red]
    n10v1 -> n4v1 [color=red]
    n11v1 -> n2v1
    subgraph "cluster n1v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_1v1\nstratum 0"
        n1v1
        n2v1
        n3v1
        subgraph "cluster_sg_1v1_var_double" {
            label="var double"
            n3v1
        }
        subgraph "cluster_sg_1v1_var_items" {
            label="var items"
            n2v1
        }
    }
    subgraph "cluster n2v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_2v1\nstratum 1"
        n4v1
        subgraph "cluster_sg_2v1_var_double" {
            label="var double"
            n4v1
        }
    }
    subgraph "cluster n3v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_3v1\nstratum 0"
        n5v1
        n6v1
        n7v1
        n8v1
        subgraph "cluster_sg_3v1_var_double" {
            label="var double"
            n5v1
            n6v1
            n7v1
        }
    }
}

