hydroflow/tests/snapshots/surface_scheduling__persist_stratum_run_available@graphvis_dot.snap
---
source: hydroflow/tests/surface_scheduling.rs
expression: df.meta_graph().unwrap().to_dot()
---
digraph {
    subgraph "cluster n1v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_1v1\nstratum 0"
        n1v1 [label="(n1v1) source_iter([0])", fontname=Monaco, shape=invhouse, style = filled, color = "#0022ff", fontcolor = "#ffffff"]
        n2v1 [label="(n2v1) persist()", fontname=Monaco, shape=invhouse, style = filled, color = "#0022ff", fontcolor = "#ffffff"]
        n1v1 -> n2v1
        subgraph "cluster sg_1v1_var_a" {
            label="var a"
            n1v1
            n2v1
        }
    }
    subgraph "cluster n2v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_2v1\nstratum 1"
        n3v1 [label="(n3v1) next_stratum()", fontname=Monaco, shape=invhouse, style = filled, color = "#0022ff", fontcolor = "#ffffff"]
        n4v1 [label="(n4v1) for_each(|x| out_send.send(x).unwrap())", fontname=Monaco, shape=house, style = filled, color = "#ffff00"]
        n3v1 -> n4v1
        subgraph "cluster sg_2v1_var_a" {
            label="var a"
            n3v1
            n4v1
        }
    }
    n2v1 -> n5v1
    n5v1 [label="(n5v1) handoff", fontname=Monaco, shape=parallelogram, style = filled, color = "#ddddff"]
    n5v1 -> n3v1 [arrowhead=box, color=red]
}

