hydroflow/tests/snapshots/surface_scheduling__stratum_loop@graphvis_mermaid.snap
---
source: hydroflow/tests/surface_scheduling.rs
expression: df.meta_graph().unwrap().to_mermaid()
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#8af,stroke:#000,text-align:left,white-space:pre
classDef pushClass fill:#ff8,stroke:#000,text-align:left,white-space:pre
linkStyle default stroke:#aaa,stroke-width:4px,color:red,font-size:1.5em;
subgraph sg_1v1 ["sg_1v1 stratum 0"]
    5v1[\"(5v1) <code>filter(|&amp;n| n &lt; 10)</code>"/]:::pullClass
end
subgraph sg_2v1 ["sg_2v1 stratum 1"]
    1v1[\"(1v1) <code>source_iter([0])</code>"/]:::pullClass
    6v1[\"(6v1) <code>next_stratum()</code>"/]:::pullClass
    2v1[\"(2v1) <code>union()</code>"/]:::pullClass
    3v1[/"(3v1) <code>tee()</code>"\]:::pushClass
    4v1[/"(4v1) <code>map(|n| n + 1)</code>"\]:::pushClass
    7v1[/"(7v1) <code>for_each(|v| out_send.send(v).unwrap())</code>"\]:::pushClass
    1v1-->2v1
    6v1-->2v1
    2v1-->3v1
    3v1-->4v1
    3v1-->7v1
    subgraph sg_2v1_var_union_tee ["var <tt>union_tee</tt>"]
        2v1
        3v1
    end
end
4v1-->9v1
5v1-->8v1
8v1["(8v1) <code>handoff</code>"]:::otherClass
8v1--x6v1
9v1["(9v1) <code>handoff</code>"]:::otherClass
9v1-->5v1

